fix header horizontal overflow

--- a/src/frontend/styles/layout.css
+++ b/src/frontend/styles/layout.css
@@ -52,7 +52,7 @@ header {
 }
 
 header .container {
-    width: 95%;
+    flex-grow: 1;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -152,6 +152,7 @@ header .container {
     display: flex;
     align-items: center;
     gap: 0.5rem;
+    min-width: 3rem;
 }
 
 .header-center .search-form input {
